minor formatting changes and remove API keys

--- a/experiments/exp12_bing_search_for_retrieval.ipynb
+++ b/experiments/exp12_bing_search_for_retrieval.ipynb
@@ -23,7 +23,7 @@
     ")\n",
     "from msrest.authentication import CognitiveServicesCredentials\n",
     "BASE_URI = 'https://api.bing.microsoft.com/v7.0/images/visualsearch'\n",
-    "SUBSCRIPTION_KEY = 'fcbb57be03f64cf191aeb1ba7835fc04'\n",
+    "SUBSCRIPTION_KEY = '***'\n",
     "from utils.data import get_data, show_data"
    ]
   },
@@ -94,7 +94,7 @@
     "import requests\n",
     "\n",
     "# Replace with your actual subscription key\n",
-    "subscription_key = \"fcbb57be03f64cf191aeb1ba7835fc04\"\n",
+    "subscription_key = \"***\"\n",
     "\n",
     "# Construct the request headers\n",
     "headers = {\n",
