--- a/experiments/exp26_debate_gpt4o.ipynb
+++ b/experiments/exp26_debate_gpt4o.ipynb
@@ -192,8 +192,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client_a = OpenAI(api_key=\"sk-proj-yQks4VWKSCjujaJT5k4oT3BlbkFJRU5d5lxleJIQ4h1dqoCW\")\n",
-    "client_b = OpenAI(api_key=\"sk-proj-yQks4VWKSCjujaJT5k4oT3BlbkFJRU5d5lxleJIQ4h1dqoCW\")\n",
+    "client_a = OpenAI(api_key=\"***\")\n",
+    "client_b = OpenAI(api_key=\"***\")\n",
     "\n",
     "name_a, name_b = \"DEBATER-1\", \"DEBATER-2\"\n",
     "output_a, output_b = \"<argument> \", \"<argument> \"\n",
@@ -475,7 +475,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "-1.-1.-1"
   }
  },
  "nbformat": 4,
