--- a/experiments/exp28_user_study_analysis.ipynb
+++ b/experiments/exp28_user_study_analysis.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,67 +132,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def analysis_1(group):\n",
+    "    init_corrs = []\n",
+    "    after_corrs = []\n",
+    "    init_confs = []\n",
+    "    after_confs = []\n",
+    "\n",
+    "    for j in group:\n",
+    "        num_init_correct = 0\n",
+    "        num_after_correct = 0\n",
+    "        init_conf = 0\n",
+    "        after_conf = 0\n",
+    "        for i in range(10):\n",
+    "            if user_responses_1[i][j] == ground_truths[i].iloc[0]:\n",
+    "                num_init_correct += 1\n",
+    "                init_conf += conf_1[i][j]\n",
+    "            if user_responses_2[i][j] == ground_truths[i].iloc[0]:\n",
+    "                num_after_correct += 1\n",
+    "                after_conf += conf_2[i][j]\n",
+    "        init_corrs.append(num_init_correct)\n",
+    "        after_corrs.append(num_after_correct)\n",
+    "        init_confs.append(init_conf / 10)\n",
+    "        after_confs.append(after_conf / 10)\n",
+    "\n",
+    "    avg_init_corrs = np.mean(init_corrs)\n",
+    "    avg_after_corrs = np.mean(after_corrs)\n",
+    "    avg_init_conf = np.mean(init_confs)\n",
+    "    avg_after_conf = np.mean(after_confs)\n",
+    "\n",
+    "    std_init_corrs = np.std(init_corrs, ddof=1)\n",
+    "    std_after_corrs = np.std(after_corrs, ddof=1)\n",
+    "    std_init_conf = np.std(init_confs, ddof=1)\n",
+    "    std_after_conf = np.std(after_confs, ddof=1)\n",
+    "\n",
+    "    return (avg_init_corrs, std_init_corrs, avg_init_conf, std_init_conf,\n",
+    "            avg_after_corrs, std_after_corrs, avg_after_conf, std_after_conf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.0 4.275\n",
-      "8.25 5.275\n"
+      "7.0 1.4142135623730951 4.275 2.106141812256082\n",
+      "8.25 0.9574271077563381 5.275 1.2996794476587936\n"
      ]
     }
    ],
    "source": [
-    "avg_init_corrs, avg_init_conf, avg_after_corrs, avg_after_conf = analysis_1(journalists)\n",
-    "print(avg_init_corrs,avg_init_conf)\n",
-    "print(avg_after_corrs, avg_after_conf)"
+    "avg_init_corrs, std_init_corrs, avg_init_conf, std_init_conf, avg_after_corrs, std_after_corrs, avg_after_conf, std_after_conf = analysis_1(journalists)\n",
+    "print(avg_init_corrs,std_init_corrs, avg_init_conf, std_init_conf)\n",
+    "print(avg_after_corrs, std_after_corrs, avg_after_conf, std_after_conf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.071428571428571 3.1714285714285713\n",
-      "7.928571428571429 5.814285714285715\n"
+      "6.071428571428571 1.1411388181101378 3.1714285714285717 0.7868423470561807\n",
+      "7.928571428571429 1.328057326976612 5.814285714285715 1.363737591980297\n"
      ]
     }
    ],
    "source": [
-    "avg_init_corrs, avg_init_conf, avg_after_corrs, avg_after_conf = analysis_1(ai_academics)\n",
-    "print(avg_init_corrs,avg_init_conf)\n",
-    "print(avg_after_corrs, avg_after_conf)"
+    "avg_init_corrs, std_init_corrs, avg_init_conf, std_init_conf, avg_after_corrs, std_after_corrs, avg_after_conf, std_after_conf = analysis_1(ai_academics)\n",
+    "print(avg_init_corrs,std_init_corrs, avg_init_conf, std_init_conf)\n",
+    "print(avg_after_corrs, std_after_corrs, avg_after_conf, std_after_conf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.666666666666667 3.9000000000000004\n",
-      "7.166666666666667 5.791666666666668\n"
+      "5.666666666666667 1.556997888323046 3.9000000000000004 1.1977251164375966\n",
+      "7.166666666666667 1.1146408580454255 5.791666666666667 1.3707717357441944\n"
      ]
     }
    ],
    "source": [
-    "avg_init_corrs, avg_init_conf, avg_after_corrs, avg_after_conf = analysis_1(others)\n",
-    "print(avg_init_corrs,avg_init_conf)\n",
-    "print(avg_after_corrs, avg_after_conf)"
+    "avg_init_corrs, std_init_corrs, avg_init_conf, std_init_conf, avg_after_corrs, std_after_corrs, avg_after_conf, std_after_conf = analysis_1(others)\n",
+    "print(avg_init_corrs,std_init_corrs, avg_init_conf, std_init_conf)\n",
+    "print(avg_after_corrs, std_after_corrs, avg_after_conf, std_after_conf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,14 +244,14 @@
     "for i in range(data.shape[0]):\n",
     "    num_init_correct = 0\n",
     "    for j in range(10):\n",
-    "        if user_responses_2[j][i] == ground_truths[j].iloc[0]:\n",
-    "            num_after_correct += 1\n",
-    "    user_init_acc.append(num_after_correct*10)"
+    "        if user_responses_1[j][i] == ground_truths[j].iloc[0]:\n",
+    "            num_init_correct += 1\n",
+    "    user_init_acc.append(num_init_correct*10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -243,21 +286,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average acc before AI insight:  60.333333333333336\n",
-      "Average acc after AI insight:  76.66666666666667\n"
+      "Average acc before AI insight:  60.333333333333336 13.535960336164635\n",
+      "Average acc after AI insight:  76.66666666666667 12.202003478482084\n"
      ]
     }
    ],
    "source": [
-    "print(\"Average acc before AI insight: \", np.mean(user_init_acc))\n",
-    "print(\"Average acc after AI insight: \", np.mean(user_after_acc))"
+    "print(\"Average acc before AI insight: \", np.mean(user_init_acc), np.std(user_init_acc))\n",
+    "print(\"Average acc after AI insight: \", np.mean(user_after_acc), np.std(user_after_acc))"
    ]
   },
   {
@@ -274,102 +317,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of dangerous changes:  17\n",
-      "['Ananya Lakara' 'Student (Sophomore in Highschool)'\n",
-      " 'Lotus Valley International School,Gurugram ' True True True 6 True 7.0\n",
-      " True True False 5 False 4 False False True 9 True 8 True False True 5\n",
-      " False 6 True True True 7 True 8 False True False 4 True 5 False False\n",
-      " False 6 False 9 False False False 8 False 9.0 True True False 7 True 10\n",
-      " True True False 3 True 5]\n",
-      "['Aayush Shah' 'Student' 'TU DELFT' True True False 8 True 7.0 True True\n",
-      " True 8 True 10 False False False 8 False 10 True False False 4 False 8\n",
-      " True True True 6 True 9 False True False 7 True 1 False False False 8\n",
-      " False 10 False False False 6 False 8.0 True True True 5 True 8 True True\n",
-      " False 6 True 8]\n",
-      "['Jana Zeller' 'Student' 'University of Oxford' True True False 7 False\n",
-      " 6.0 True True True 5 True 6 False False True 8 True 6 True False True 6\n",
-      " False 3 True True True 5 True 8 False True False 3 True 2 False False\n",
-      " False 4 False 6 False False False 3 False 6.0 True True False 3 True 3\n",
-      " True True False 3 False 3]\n",
-      "['Manu Sriram Kamath' 'Creative Director- Marketing' 'Guardian Group' True\n",
-      " True True 5 True 8.0 True True True 9 True 10 False False True 5 False 5\n",
-      " True False False 5 False 8 True True True 5 True 10 False True False 5\n",
-      " True 8 False False False 5 False 7 False False False 7 False 7.0 True\n",
-      " True False 5 True 5 True True False 5 True 5]\n",
-      "['Harshil ' 'Student ' nan True True False 4 False 3.0 True True True 5\n",
-      " True 7 False False True 9 True 8 True False False 5 False 5 True True\n",
-      " True 6 True 6 False True False 4 True 2 False False False 6 False 8 False\n",
-      " False True 3 False 3.0 True True True 5 True 7 True True False 2 True 1]\n",
-      "[\"Sinead O'Brien\" 'Executive Product Manager - AI Research' 'BBC' True\n",
-      " True True 6 True 10.0 True True False 6 True 10 False False True 8 False\n",
-      " 10 True False True 6 False 10 True True True 6 True 10 False True False 6\n",
-      " True 10 False False False 6 False 10 False False False 6 False 10.0 True\n",
-      " True False 6 True 10 True True True 6 True 10]\n",
-      "['Jannick Kremer' \"Master's Student in Advanced Computer Science\"\n",
-      " 'University of Oxford' True True True 4 True 7.0 True True True 3 True 8\n",
-      " False False True 6 False 3 True False False 6 False 6 True True True 7\n",
-      " True 10 False True False 5 True 3 False False False 4 False 6 False False\n",
-      " False 8 False 9.0 True True False 5 True 7 True True False 3 True 4]\n",
-      "['Christian' 'Student' '/' True True False 3 False 0.0 True True True 7\n",
-      " True 10 False False True 6 False 4 True False False 3 False 4 True True\n",
-      " True 7 True 10 False True False 4 True 7 False False False 4 False 7\n",
-      " False False False 7 False 8.0 True True True 6 True 8 True True False 5\n",
-      " False 9]\n",
-      "['Zainab' 'Student' 'University of Oxford ' True True True 6 True 10.0\n",
-      " True True False 3 True 7 False False False 1 False 10 True False False 7\n",
-      " False 10 True True True 7 True 10 False True False 4 True 7 False False\n",
-      " False 3 False 7 False False True 3 False 3.0 True True True 5 True 10\n",
-      " True True True 2 True 9]\n",
-      "['Aqib Mahfuz ' 'Student' 'Oxford' True True False 5 False 8.0 True True\n",
-      " False 4 True 7 False False False 0 False 8 True False False 6 False 8\n",
-      " True True True 5 True 10 False True False 5 True 8 False False False 1\n",
-      " False 7 False False False 8 False 8.0 True True False 7 True 6 True True\n",
-      " False 1 True 4]\n",
-      "['Afra Nawar' 'Student' 'University of Oxford' True True True 6 True 8.0\n",
-      " True True True 8 True 10 False False False 6 False 7 True False False 8\n",
-      " False 10 True True True 8 True 8 False True False 8 True 5 False False\n",
-      " False 6 False 8 False False False 7 False 8.0 True True False 5 True 5\n",
-      " True True False 6 True 4]\n",
-      "['Magnus Sesodia' 'Researcher' 'Oxford University' True True False 4 True\n",
-      " 7.0 True True True 4 True 8 False False True 6 False 6 True False True 8\n",
-      " False 6 True True True 4 True 8 False True True 4 True 8 False False True\n",
-      " 3 False 7 False False False 4 False 8.0 True True False 4 True 9 True\n",
-      " True True 4 True 8]\n",
-      "['Jingjie Yang' 'Phd student' 'Department of Computer Science, Oxford'\n",
-      " True True False 6 True 1.0 True True True 5 True 5 False False False 9\n",
-      " False 10 True False False 7 False 8 True True True 3 True 6 False True\n",
-      " False 3 True 5 False False False 7 False 10 False False False 7 False\n",
-      " 10.0 True True False 10 True 7 True True False 8 True 5]\n",
-      "['Jack Foxabbott' 'student' 'Oxford' True True False 6 True 9.0 True True\n",
-      " True 2 True 9 False False False 0 False 7 True False True 2 False 8 True\n",
-      " True True 3 True 10 False True False 5 False 3 False False False 0 False\n",
-      " 7 False False False 7 False 10.0 True True True 7 True 10 True True False\n",
-      " 2 True 8]\n",
-      "['Robin Park' 'PhD Student' 'University of Oxford' True True False 5 True\n",
-      " 7.0 True True False 5 True 7 False False True 4 False 7 True False True 7\n",
-      " True 4 True True True 7 True 8 False True False 6 True 7 False False\n",
-      " False 5 False 7 False False False 7 False 8.0 True True False 6 True 8\n",
-      " True True False 5 True 7]\n",
-      "['Laura Ellis' 'Journalist/TechFALSElogist' 'BBC' True True False 6 True\n",
-      " 10.0 True True True 9 True 10 False False True 5 False 8 True False True\n",
-      " 8 False 6 True True False 3 True 6 False True False 7 True 6 False False\n",
-      " False 4 False 8 False False False 7 False 8.0 True True True 5 True 8\n",
-      " True True False 3 True 6]\n",
-      "['Claire Timms' 'Journalist' 'BBC' True True True 7 False 7.0 True True\n",
-      " True 8 True 8 False False True 8 True 8 True False True 9 True 8 True\n",
-      " True True 7 True 8 False True False 8 True 7 False False False 7 False 7\n",
-      " False False False 9 False 8.0 True True True 8 True 9 True True True 8\n",
-      " True 8]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Number of dangerous changes: \", len(danger_changes))\n",
     "for i in danger_changes:\n",
@@ -447,13 +397,6 @@
    "source": [
     "num_conf_change"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -472,7 +415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "-1.-1.-1"
   }
  },
  "nbformat": 4,
