--- a/experiments/exp10_result_analysis.ipynb
+++ b/experiments/exp10_result_analysis.ipynb
@@ -565,25 +565,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "27\n",
-      "Num unsures:  0\n",
-      "Num incorrects:  9\n",
-      "Accuracy: 0.6667\n",
-      "Precision: 0.6667\n",
-      "Recall: 0.6154\n",
-      "Accuracy without unsures: 0.6667\n"
+      "301\n",
+      "Num incorrects:  22\n",
+      "Accuracy: 0.9269\n",
+      "Precision: 0.8951\n",
+      "Recall: 0.9667\n",
+      "Accuracy without unsures: 0.9269\n"
      ]
     }
    ],
    "source": [
-    "web_access_file = \"../scripts/dj_temp.json\"\n",
+    "web_access_file = \"../scripts/gpt_res_1.json\"\n",
     "result_data7 = get_results(web_access_file)\n",
     "print(len(result_data7))\n",
     "#num_disagreements(result_data7)\n",
@@ -595,65 +594,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "216\n",
-      "Num unsures:  2\n",
-      "Num incorrects:  20\n",
-      "Accuracy: 0.9074\n",
-      "Precision: 0.8729\n",
-      "Recall: 0.9537\n",
-      "Accuracy without unsures: 0.9159\n"
-     ]
-    }
-   ],
    "source": [
-    "web_access_file = \"../../datasets/results/gpt4o_res_temp_final.json\"\n",
-    "result_data7 = get_results(web_access_file)\n",
-    "print(len(result_data7))\n",
-    "#num_disagreements(result_data7)\n",
-    "precision, recall = get_precision_and_recall(result_data7, test_data_annotations)\n",
-    "print(\"Accuracy: {:.4f}\".format(get_accuracy(result_data7, test_data_annotations)))\n",
-    "print(\"Precision: {:.4f}\".format(precision))\n",
-    "print(\"Recall: {:.4f}\".format(recall))\n",
-    "print(\"Accuracy without unsures: {:.4f}\".format(get_acc_without_unsures(result_data7, test_data_annotations)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1000\n",
-      "Num unsures:  0\n",
-      "Num incorrects:  141\n",
-      "Accuracy: 0.8590\n",
-      "Precision: 0.7928\n",
-      "Recall: 0.9720\n",
-      "Accuracy without unsures: 0.8590\n"
-     ]
-    }
-   ],
-   "source": [
-    "web_access_file = \"../../datasets/results/gpt4o_final/final_compiled.json\"\n",
-    "result_data7 = get_results(web_access_file)\n",
-    "print(len(result_data7))\n",
-    "#num_disagreements(result_data7)\n",
-    "precision, recall = get_precision_and_recall(result_data7, test_data_annotations)\n",
-    "print(\"Accuracy: {:.4f}\".format(get_accuracy(result_data7, test_data_annotations)))\n",
-    "print(\"Precision: {:.4f}\".format(precision))\n",
-    "print(\"Recall: {:.4f}\".format(recall))\n",
-    "print(\"Accuracy without unsures: {:.4f}\".format(get_acc_without_unsures(result_data7, test_data_annotations)))"
+    "### GPT final results"
    ]
   },
   {
@@ -676,7 +620,7 @@
     }
    ],
    "source": [
-    "web_access_file = \"../../datasets/results/gpt4o_final/corrected_results.json\"\n",
+    "web_access_file = \"../../datasets/results/gpt4o_final/results.json\"\n",
     "result_data7 = get_results(web_access_file)\n",
     "print(len(result_data7))\n",
     "#num_disagreements(result_data7)\n",
@@ -691,7 +635,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Analysing where model fails (what kinds of examples the model fails on)"
+    "### Analysing where model fails (what kind of examples the model fails on)"
    ]
   },
   {
@@ -738,50 +682,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Num unsures:  0\n",
-      "[10, 14, 31, 34, 38, 62, 74, 80, 110, 120, 126, 151, 152, 164, 175, 199, 205, 216, 218, 224, 226, 234, 241, 242, 246, 250, 256, 260, 272, 284, 286, 300, 304, 320, 334, 336, 338, 348, 354, 360, 362, 372, 384, 386, 389, 398, 400, 404, 406, 410, 412, 416, 428, 436, 438, 446, 460, 464, 466, 470, 473, 480, 482, 496, 498, 502, 510, 516, 518, 520, 528, 530, 535, 538, 554, 562, 566, 580, 584, 588, 598, 600, 602, 608, 614, 623, 626, 651, 660, 666, 668, 672, 676, 678, 684, 686, 700, 708, 719, 720, 722, 726, 728, 752, 760, 762, 770, 772, 774, 778, 780, 786, 790, 794, 806, 814, 823, 826, 832, 836, 838, 842, 854, 856, 860, 864, 872, 874, 882, 888, 890, 900, 932, 940, 952, 962, 965, 972, 974, 978, 990]\n"
-     ]
-    }
-   ],
-   "source": [
-    "incorrect_idx = get_incorrect_idx(result_data7, test_data_annotations)\n",
-    "print(incorrect_idx)\n",
-    "#failed_samples(incorrect_idx, result_data7)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "141"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(incorrect_idx)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "incorrect_idx = get_incorrect_idx(result_data7, test_data_annotations)\n",
+    "print(incorrect_idx)\n",
+    "failed_samples(incorrect_idx, result_data7)"
+   ]
   }
  ],
  "metadata": {
@@ -800,7 +708,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "-1.-1.-1"
   }
  },
  "nbformat": 4,
