final release updates and gpt4o experiments

--- a/experiments/exp10_result_analysis.ipynb
+++ b/experiments/exp10_result_analysis.ipynb
@@ -565,24 +565,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "301\n",
-      "Num incorrects:  22\n",
-      "Accuracy: 0.9269\n",
-      "Precision: 0.8951\n",
-      "Recall: 0.9667\n",
-      "Accuracy without unsures: 0.9269\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "web_access_file = \"../scripts/gpt_res_1.json\"\n",
+    "web_access_file = \"../../datasets/results/gpt_final.json\"\n",
     "result_data7 = get_results(web_access_file)\n",
     "print(len(result_data7))\n",
     "#num_disagreements(result_data7)\n",
@@ -708,7 +695,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "-1.-1.-1"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
