update for keys

--- a/experiments/exp26_debate_gpt4o.ipynb
+++ b/experiments/exp26_debate_gpt4o.ipynb
@@ -380,7 +380,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "judge = OpenAI(api_key=\"sk-proj-yQks4VWKSCjujaJT5k4oT3BlbkFJRU5d5lxleJIQ4h1dqoCW\")\n",
+    "judge = OpenAI(api_key=\"***\")\n",
     "judge_response = judge.chat.completions.create(\n",
     "    model=\"gpt-4o\",\n",
     "    messages=[\n",
@@ -430,33 +430,6 @@
    "source": [
     "print(judge_response.choices[0].message.content)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "CompletionUsage(completion_tokens=207, prompt_tokens=1231, total_tokens=1438)"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "judge_response.usage"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -475,7 +448,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "-1.-1.-1"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
