--- a/experiments/exp27_debating_adv_gpt4o.ipynb
+++ b/experiments/exp27_debating_adv_gpt4o.ipynb
@@ -106,7 +106,7 @@
     "                    The goal is to consider the contextual relationship between the image and caption based on the news articles and correctly identify if the image caption pair is misinformation or not and to explain your answer in detail.\n",
     "                    Think step by step and plan a detailed explanation for your answer.\"\"\"}]\n",
     "        self.model = model_name\n",
-    "        self.client = OpenAI(api_key=\"sk-EEsjIjs15uUkLsbSFx7T5CJsXQs_yZqT3YfmRXXLkqT3BlbkFJQU0Pw8ERSqsWdMBsCg_TSR2DJZoylTlxX57t-ACRQA\")\n",
+    "        self.client = OpenAI(api_key=\"***\")\n",
     "    def add_message(self, role, content):\n",
     "        # Adds a message to the conversation.\n",
     "        self.conversation.append({\"role\": role, \"content\": content})\n",
