--- a/experiments/exp6_debating_llava_web_access.ipynb
+++ b/experiments/exp6_debating_llava_web_access.ipynb
@@ -1249,7 +1249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "-1.-1.-1"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
